fixed horizontal scroll issue

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
 	font-family: "EB Garamond";
 	font-size: 28px;
 	z-index: 500;
-	width: 104.4%;
+	width: 2002.5px;
 	height: 40px;
 	background-color: white;
 	padding-top: 24px;
